netcfg (1.99) UNRELEASED; urgency=low

  * netcfg.c (main): Remove a local definition of hostname.
    (Closes: #690330)

 -- Philipp Kern <pkern@debian.org>  Sat, 13 Oct 2012 13:47:58 +0200

netcfg (1.98) unstable; urgency=low

  * Re-upload without cruft from my checkout, oops.

 -- Cyril Brulebois <kibi@debian.org>  Fri, 05 Oct 2012 00:57:08 +0200

netcfg (1.97) unstable; urgency=low

  * Fix missing build-dep on check for the test suite.

 -- Cyril Brulebois <kibi@debian.org>  Thu, 04 Oct 2012 23:26:58 +0200

netcfg (1.96) unstable; urgency=low

  [ Philipp Kern ]
  * Makefile: set DEB_HOST_ARCH{,_OS} conditionally
  * autoconfig.c: kill dhcp6c after timeout unless a lease is obtained
  * Fix the dns- entries in /etc/network/interfaces. (Closes: #689474)
    Patch by Matthew L. Dailey.
  * Run the test suite during build.

  [ Christian Perrier ]
  * [l10n] Drop use of sublevel 6 and move "recently" added
    strings to the sublevel they pertain to.

  [ Samuel Thibault ]
  * Fix ethtool-lite hurd-i386 build.

  [ Updated translations ]
  * Hindi (hi.po) by Kumar Appaiah
  * Marathi (mr.po) by sampada

 -- Philipp Kern <pkern@debian.org>  Thu, 04 Oct 2012 22:38:34 +0200

netcfg (1.95) unstable; urgency=low

  [ Cyril Brulebois ]
  * Stop overriding CC if it's set.

  [ Updated translations ]
  * Catalan (ca.po) by Jordi Mallach
  * Danish (da.po) by Joe Hansen
  * Dutch (nl.po) by Jeroen Schot
  * Portuguese (Brazil) (pt_BR.po) by Felipe Augusto van de Wiel (faw)
  * Swedish (sv.po) by Martin Bagge / brother
  * Thai (th.po) by Theppitak Karoonboonyanan

 -- Christian Perrier <bubulle@debian.org>  Fri, 28 Sep 2012 07:19:38 +0200

netcfg (1.93) unstable; urgency=low

  [ Philipp Kern ]
  * Check the return code of the waitpid calls found in various cleanup
    routines. (Closes: #688470)
  * Align netcfg's generation of /etc/hosts with netbase's postinst,
    i.e. add localhost mapping to ::1 as well as 127.0.0.1.
    (Closes: #686970)
